k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: okchat
  labels:
    name: okchat
    environment: base
